# NBABets-v2

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
.claude/: .gitignore  CLAUDE.md  README.md  settings.json  skillpacks.example.json
.claude/agents/: automation-engineer.md  code-reviewer.md  desktop-engineer.md  project-manager.md  provider-engineer.md  test-runner.md  training-engineer.md
.claude/hooks/: audit_config_change.py  block_protected_paths.py  post_edit_quality.py
.github/workflows/: ci.yml
app/: __init__.py
app/config/: settings.py
app/core/: icons.py  logging.py  resources.py
app/db/: bootstrap.py  discovery.py  session.py
app/evaluation/: __init__.py  backtest.py  metrics.py  no_vig.py  prop_decision.py  prop_pricer.py  synthetic_surrogate.py
app/models/: all.py  events.py  (+1 more)
config/: kalshi_resolution_targets.json  kalshi_resolution_targets.template.json  kalshi_symbols.example.json  kalshi_symbols.nba.current.json  kalshi_symbols.template.json  trading_limits.example.json
data/: player_bias_offsets.json
desktop_tauri/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop_tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop_tauri/src-tauri/src/: main.rs
docs/: README.md  agent_mode_release_checklist.md  controlled_auto_rollout.md  debug_incident_board.md  debug_repro_matrix.md  full_review_audit_inventory.md  full_review_closeout_report.md  full_review_governance.md  integration_contracts.md  kalshi_decision_brain.md  local_autonomy_contracts.md  local_autonomy_rollout.md  rotation_shock_architecture.md  troubleshooting_runbooks.md
llm_train/: __init__.py
memory/: kalshi_decision_brain.md  project_full_coverage_overhaul.md  rotation_shock_index.md
scripts/: README.md  backfill_historical_box_scores.py  backtest_lever_analysis.py  backtest_rotation_shock.py  backtest_with_surrogate.py  build_live_decision_pack.py  build_sidecar.ps1  build_synthetic_surrogates.py  build_tauri.ps1  check.ps1  daily_workflow.py  deep_model_eval.py  derive_player_bias_offsets.py  dev_startup.ps1  diagnostic_run.py  eval_daily.ps1  grade_historical_props.py  join_rotation_shadow_with_actuals.py  kalshi_live_preflight.py  learn_rotation_weights.py  pull_historical_props.py  reset_startup_day.py  resolve_kalshi_targets.py  retrain_and_predict.py  rotation_shadow_compare.py  run_ablation.py  run_daily_automation.py  run_desktop_app.py  run_server.py  run_trading_loop.py  smoke_tauri.ps1  sync_claude_skillpack.ps1  sync_claude_skillpack.py  sync_kalshi_decision_brain.py
(+398 files in other folders)
